# BPI-1296-Android6

./: .build_config  README.md  build_all.sh  build_image.sh  build_release_android.sh  build_release_linux_kernel.sh  build_release_openwrt.sh
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/: .config  .packageinfo  .targetinfo  Config-build.in  Makefile  README  feeds.conf  netconfig.sh  repositories.conf  rtl8192cd.conf
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/config/: Config-images.in
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/: management  oldpackages  packages  realtek  realtek.index  realtek.targetindex  routing  telephony
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/luci.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/management.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/oldpackages.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/packages.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/realtek.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/routing.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/feeds/telephony.tmp/: .packageinfo  location
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/include/: download.mk  host-build.mk  image.mk  kernel-build.mk  kernel-defaults.mk  kernel.mk  netfilter.mk  package-ipkg.mk  prepare.mk  toplevel.mk  version.mk
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/scripts/: feeds
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/tmp_2/: .config-feeds.in  .config-package.in  .config-target.in  .kconfig-rtd1295_gmnas_emmc  .kconfig-rtd1295_mnas_emmc  .kconfig-rtd1295_nas_emmc
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/tmp_f/: .config-package.in  .kconfig-rtd1295  .packagedeps  .packagefeeds  .packageinfo
OpenWrt-ImageBuilder-rtd1295-mnas_emmc.Linux-x86_64/toolchain/: Config.in
android/: env.sh
android/device/realtek/proprietary/libs/CECControl/: Android.mk  CMakeLists.txt  Makefile  UpdateList.txt
android/device/realtek/proprietary/libs/CECControl/test/: Makefile  cec_test
android/device/realtek/proprietary/libs/CECControl/test/inc/: CECmoduleTest.h  RTK_DVR.h  auxfun.h
android/device/realtek/proprietary/libs/DataObject/: Android.mk  CMakeLists.txt  Makefile  db_transfer  ext.db  extCross.db
android/device/realtek/proprietary/libs/DataObject/encode/: Android.mk  Makefile  Makefile.386  Makefile.mips
android/ext_bin/: ALSADaemon
image_file_creator/: Makefile  Makefile.in
image_file_creator/components/: Makefile
linux-kernel/: .config  .config_golden  Module.symvers
linux-kernel/drivers/: Kconfig  Makefile
linux-kernel/fs/: block_dev.c
linux-kernel/golden_img/: rtd-1294-giraffe-1GB.dtb  rtd-1295-fpga.dtb  rtd-1295-giraffe-1.5GB.dtb  rtd-1295-giraffe-1GB.CMAx2.dtb  rtd-1295-giraffe-2GB-tee.dtb  rtd-1295-giraffe-2GB.dtb  rtd-1295-giraffe-dongle.dtb  rtd-1295-giraffe.dtb  rtd-1295-recovery.dtb  rtd-1295-xen-giraffe.dtb  rtd-1296-qa-rescue-3GB.dtb  rtd-1296-qa-rescue-4GB.dtb  rtd-1296-qa-rescue.dtb  rtd-1296-saola-1GB.CMAx2.dtb  rtd-1296-saola-2GB-tee.dtb  rtd-1296-saola-2GB.dtb  rtd-1296-saola-3GB.dtb  rtd-1296-saola-4GB.dtb
linux-kernel/mm/: page_alloc.c  vmscan.c
linux-kernel/scripts/: kallsyms  recordmcount
(+5698 files in other folders)
