INCLUDE(../../../include/config.txt)

SET(MAKEFLAGS " --no-print-directory")
SET(CFLAGS ${DEBUGFLAG})

SET(CC ${MYCC})
SET(AR ${MYAR})


SET(MYLIB CECControl)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../lib/)
SET(EXPORT_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../Include/Platform_Lib/CECControl)
SET(OSAL_INC ${CMAKE_CURRENT_SOURCE_DIR}/../../Include/)
SET(COMMON_INC ${CMAKE_CURRENT_SOURCE_DIR}/common/inc/)
SET(ADAPTER_INC ${CMAKE_CURRENT_SOURCE_DIR}/adapter/inc/)
SET(CONTROLLER_INC ${CMAKE_CURRENT_SOURCE_DIR}/controller/inc)
SET(BRIDGE_INC ${CMAKE_CURRENT_SOURCE_DIR}/bridge/inc)
SET(PLATFORM_COMM_INC ${CMAKE_CURRENT_SOURCE_DIR}/../../Include//Platform_Lib/PlatformCommon)


SET(INC_DEF ${CMAKE_CURRENT_SOURCE_DIR}/inc ${OSAL_INC} ${PLATFORM_COMM_INC}
${COMMON_INC} ${ADAPTER_INC} ${BRIDGE_INC} ${CONTROLLER_INC})

SET(SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/common/src/CEC_aux.cpp)

SET(SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/adapter/src/CECAdapter.cpp)
SET(SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/adapter/src/CECAdapter_Mars.cpp)

SET(SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/controller/src/CECController.cpp)


SET(SRC ${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/bridge/src/CECAPBridge.cpp)



IF(USE_CEC STREQUAL YES)

ENDIF(USE_CEC STREQUAL YES)

INCLUDE_DIRECTORIES(${INC_DEF})
ADD_DEFINITIONS(${CFLAGS})
ADD_LIBRARY(${MYLIB} ${SRC})
ADD_CUSTOM_COMMAND(TARGET ${MYLIB} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory ${EXPORT_INC_PATH})

ADD_CUSTOM_COMMAND(TARGET ${MYLIB} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy
${CMAKE_CURRENT_SOURCE_DIR}/adapter/inc/*.h ${EXPORT_INC_PATH})
ADD_CUSTOM_COMMAND(TARGET ${MYLIB} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy
${CMAKE_CURRENT_SOURCE_DIR}/controller/inc/*.h ${EXPORT_INC_PATH})

ADD_CUSTOM_COMMAND(TARGET ${MYLIB} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy
${CMAKE_CURRENT_SOURCE_DIR}/bridge/inc/*.h ${EXPORT_INC_PATH})





